# StarGobang

./: LICENSE  README.md
StarGobang/: .gitignore  README.md
StarGobang/cpp/: CMakeLists.txt  LICENSE  README.md  models
StarGobang/cpp/.cmake/api/v1/reply/: cache-v2-c699bd2038418822a5cb.json  cmakeFiles-v1-a88a7b7a025d7f916043.json  codemodel-v2-19075893fc831268ee2f.json  index-2026-03-26T03-59-57-0697.json  target-gobang_demo-Release-38be1a1f2c33c86b3a3f.json  target-gobang_engine-Release-50433d44a0834ba57f0e.json
StarGobang/cpp/cmake/: FindONNXRuntime.cmake
StarGobang/cpp/include/: board.h  config.h  forbidden_move_detector.h  gobang_engine.h  hpc_scheduler.h  learning_monitor.h  mcts.h  meta_learner.h
StarGobang/cpp/scripts/: manage_models.sh  migrate_to_stargo.sh  quickstart.sh
StarGobang/cpp/src/: board.cpp  forbidden_move_detector.cpp  gobang_engine.cpp  hpc_scheduler.cpp  inference_engine.cpp  learning_monitor.cpp  main.cpp  mcts.cpp  meta_learner.cpp
StarGobang/python/: .gitignore  CLI_GUIDE.md  LICENSE  MODEL_CONTRIBUTION_GUIDE.md  MODEL_README_TEMPLATE.md  QUICKSTART_EN.md  README.md  cli.py  config.yaml  cpp_adapter.py  eval_model.py  game.py  model.py  requirements.txt  train_loop.py  verify_compatibility.py
StarGobang/python/utils/: __init__.py  data_generator.py  monitor_parser.py
